# indigent-defense-stats

./: .gitignore  .json  CONTRIBUTING.md  LICENSE  README.md  build_event_csv.py  parser_log.txt  pyproject.toml  requirements.txt  test.html  zip_folder.py
.github/: CODEOWNERS
.github/workflows/: python-app.yml
analysis/R/: clean_charges.R  clean_events.R  create_likelihood_plot.R  create_nested_data.R  create_vis_data.R  normalize_charges.R
azure/: write_to_blob.py
cleaner/: __main__.py  umich-uccs-database.json
docs/: conf.py  index.rst
resources/: .~lock.texas_county_data.csv#  README.md  logger_log.txt  texas_census_data.csv  texas_county_data.csv  umich-uccs-database.json
resources/minimum_scraper_examples/: harris_minimum_scraper.py
resources/test_files/: field_validation_list.json  hays_hidden_values.txt  hays_main_page.html  hays_search_page.html  test_123456.html  test_123456.json
src/: __init__.py  aws_s3.py  build_event_csv.py  calendar_data_to_case_data.py  combine_parsed.py  config.py  creds.py  parse_case_data.py  parse_json.py  parser.py  parser_bs4.py  parser_pandas.py  print_case_stats.py  print_stats.py  process_case_data.py  scrape.py  scrape_calendar_data.py  scrape_case_data.py  scrape_html.py  scrape_html_data.py  scraper.py  test.js  zip_folder.py
src/cleaner/: Data Structure of Cleaned JSON.md  __init__.py  __main__.py  run_cleaner.py
src/configs/: scrape_config.py
src/libraries/: scrape_config.py
src/parser/: README.md  (+6 more)
test/: full_e2e.py  simple_happy_path_pre2017.py
tests/: full_e2e.py  outputs.py  test_parse.py
(+29 files in other folders)
