[tool.poetry]
name = "odyssey-court-records-to-json"
version = "0.1.0"
description = "Scrape criminal court records from Texas county records websites hosted in Odyssey"
authors = ["Derek <derek@derac.org>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.27.1"
bs4 = "^0.0.1"
boto3 = "^1.21.18"
azure-storage-blob = "^12.13.1"
azure-identity = "^1.11.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
